src/test/fail/redeclaration.ly
<@lily string a integer a
